--- a/css/style.css
+++ b/css/style.css
@@ -79,7 +79,7 @@ font-family: 'Open Sans', sans-serif;
 }
 
 .top{
-background: url('C:/Users/Admin/Desktop/Develope/projects/landing_project/images/bgimg.jpg') repeat;
+background: url('images/bgimg.jpg') repeat;
 padding-top: 160px;
 padding-bottom: 180px;
 }
