--- a/css/style.css
+++ b/css/style.css
@@ -79,7 +79,7 @@ font-family: 'Open Sans', sans-serif;
 }
 
 .top{
-background: url('.images/bgimg.jpg') repeat;
+background: url('../images/bgimg.jpg') repeat;
 padding-top: 160px;
 padding-bottom: 180px;
 }
